[gd_scene load_steps=8 format=3 uid="uid://c3asvvqqrvvu3"]

[ext_resource type="Script" path="res://scripts/game/hangar/Hangar.gd" id="1_pr6oe"]
[ext_resource type="Script" path="res://scripts/game/hangar/StorePanel.gd" id="2_jdma5"]
[ext_resource type="Script" path="res://scripts/game/hangar/StatPanel.gd" id="2_nkioq"]
[ext_resource type="Script" path="res://scripts/game/hangar/StoreItem.gd" id="2_pxfni"]
[ext_resource type="Script" path="res://scripts/game/hangar/SlotMachinePanel.gd" id="5_0uvjc"]
[ext_resource type="Texture2D" uid="uid://v76toocjr0f4" path="res://assets/backrounds/store-people.png" id="5_2t4po"]
[ext_resource type="Texture2D" uid="uid://bxc4isbbfj30" path="res://assets/backrounds/Slot-people.png" id="6_jgd4m"]

[node name="Hangar" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_pr6oe")

[node name="NextLevelButton" type="Button" parent="."]
layout_mode = 2
offset_left = 517.0
offset_top = 526.0
offset_right = 600.0
offset_bottom = 557.0
text = "next level"

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 429.0
offset_top = 27.0
offset_right = 469.0
offset_bottom = 67.0

[node name="WaveLabel" type="Label" parent="TopBar"]
layout_mode = 2

[node name="SwitchButton" type="Button" parent="TopBar"]
layout_mode = 2

[node name="LeftPanel" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 989.0
offset_top = 189.0
offset_right = 1029.0
offset_bottom = 274.0

[node name="PlayerStatsPanel" type="ScrollContainer" parent="LeftPanel"]
layout_mode = 2
script = ExtResource("2_nkioq")

[node name="StatsContainer" type="VBoxContainer" parent="LeftPanel/PlayerStatsPanel"]
layout_mode = 2

[node name="Button" type="Button" parent="LeftPanel"]
layout_mode = 2

[node name="WeaponSlotsPanel" type="HBoxContainer" parent="LeftPanel"]
layout_mode = 2

[node name="Slot0" type="Panel" parent="LeftPanel/WeaponSlotsPanel"]
layout_mode = 2

[node name="Slot1" type="Panel" parent="LeftPanel/WeaponSlotsPanel"]
layout_mode = 2

[node name="Slot2" type="Panel" parent="LeftPanel/WeaponSlotsPanel"]
layout_mode = 2

[node name="Slot3" type="Panel" parent="LeftPanel/WeaponSlotsPanel"]
layout_mode = 2

[node name="Slot4" type="Panel" parent="LeftPanel/WeaponSlotsPanel"]
layout_mode = 2

[node name="Slot5" type="Panel" parent="LeftPanel/WeaponSlotsPanel"]
layout_mode = 2

[node name="InventoryScroll" type="ScrollContainer" parent="LeftPanel"]
layout_mode = 2

[node name="InventoryGrid" type="GridContainer" parent="LeftPanel/InventoryScroll"]
layout_mode = 2

[node name="StoreSlotMachinePanel" type="Control" parent="."]
anchors_preset = 0
offset_left = 422.0
offset_top = 106.0
offset_right = 462.0
offset_bottom = 146.0

[node name="StoreWrapper" type="Control" parent="StoreSlotMachinePanel"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StoreBackground" type="TextureRect" parent="StoreSlotMachinePanel/StoreWrapper"]
layout_mode = 0
offset_left = -332.0
offset_top = -19.0
offset_right = 82.0
offset_bottom = 529.0
texture = ExtResource("5_2t4po")
expand_mode = 1

[node name="StorePanel" type="VBoxContainer" parent="StoreSlotMachinePanel/StoreWrapper"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 83.0
script = ExtResource("2_jdma5")

[node name="StoreCurrencyLabel" type="Label" parent="StoreSlotMachinePanel/StoreWrapper/StorePanel"]
layout_mode = 2

[node name="RerollButton" type="Button" parent="StoreSlotMachinePanel/StoreWrapper/StorePanel"]
layout_mode = 2

[node name="StoreItem0" type="Button" parent="StoreSlotMachinePanel/StoreWrapper/StorePanel"]
layout_mode = 2
script = ExtResource("2_pxfni")

[node name="StoreItem1" type="Button" parent="StoreSlotMachinePanel/StoreWrapper/StorePanel"]
layout_mode = 2
script = ExtResource("2_pxfni")

[node name="StoreItem2" type="Button" parent="StoreSlotMachinePanel/StoreWrapper/StorePanel"]
layout_mode = 2
script = ExtResource("2_pxfni")

[node name="StoreItem3" type="Button" parent="StoreSlotMachinePanel/StoreWrapper/StorePanel"]
layout_mode = 2
script = ExtResource("2_pxfni")

[node name="SlotWrapper" type="Control" parent="StoreSlotMachinePanel"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SlotBackground" type="TextureRect" parent="StoreSlotMachinePanel/SlotWrapper"]
layout_mode = 0
offset_left = -355.0
offset_top = -8.0
offset_right = 90.0
offset_bottom = 522.0
texture = ExtResource("6_jgd4m")
expand_mode = 1

[node name="SlotMachinePanel" type="VBoxContainer" parent="StoreSlotMachinePanel/SlotWrapper"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 47.0
script = ExtResource("5_0uvjc")

[node name="SlotMachineCurrencyLabel" type="Label" parent="StoreSlotMachinePanel/SlotWrapper/SlotMachinePanel"]
layout_mode = 2

[node name="SpinButton" type="Button" parent="StoreSlotMachinePanel/SlotWrapper/SlotMachinePanel"]
layout_mode = 2

[node name="SlotResultItem" type="Button" parent="StoreSlotMachinePanel/SlotWrapper/SlotMachinePanel"]
layout_mode = 2
script = ExtResource("2_pxfni")
